tests/NormalTests/paczka1/fuzzy1/82047668.err
Error in line 2: 453LGA7Kcxj S314 30,0
Error in line 5: 453LGA7Kcxj A378 46,7
Error in line 10: 453LGA7Kcxj S997 62,8
Error in line 14: AH2UhBHWlM0 S997 37,9
Error in line 25: AH2UhBHWlM0 S314 86,0
Error in line 20: lCq6bfG5LsH S430 28,3
Error in line 29: AH2UhBHWlM0 S997 66,3
Error in line 35: lCq6bfG5LsH S314 85,0
Error in line 38: lCq6bfG5LsH S430 36,2
